stop suggestion in input change temp to floor val and add delhi

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,12 +48,13 @@
                 <div class="card2 col-lg-4 col-md-5">
                     <form action="/" method="get">
                         <div class="row px-3">
-                            <input id="city" type="text" name="location" placeholder="Another location" class="mb-5 pr-6">
+                            <input id="city" type="text" name="location" placeholder="Another location"
+                                autocomplete="off" class="mb-5 pr-6">
                             <button class="search fa fa-search mb-5 mr-0 text-center" type="submit"></button>
                         </div>
                     </form>
                     <div class="mr-5">
-                        <p class="light-text suggestion"><a href="/?location=Birmingham">Birmingham</a></p>
+                        <p class="light-text suggestion"><a href="/?location=Delhi">Delhi</a></p>
                         <p class="light-text suggestion"><a href="/?location=Manchester">Manchester</a></p>
                         <p class="light-text suggestion"><a href="/?location=New York">New York</a></p>
                         <p class="light-text suggestion"><a href="/?location=California">California</a></p>
